# pytessy

./: README.md  setup.cfg
source/: pytessy.py
