[metadata]
name = pytessy
license = Internal
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platform = any

[options]
name = pytessy
python_requires = >=3.8
packages = pytessy
package_dir = 
    pytessy=source

setup_requires =
    setuptools >=38.3.0
    pip >= 20.0
    setuptools_scm
