[metadata]
name = pytessy
author = hyperrixel
url = https://github.com/hyperrixel/pytessy
project_urls =
    Bug Tracker = https://github.com/hyperrixel/pytessy/issues
    Documentation = https://pytessy.readthedocs.io/
    Source Code = https://github.com/hyperrixel/pytessy

  
license = Boost Software License 1.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platform = any
license_files =
  LICENSE

[options]
name = pytessy
python_requires = >=3.8
packages = pytessy
package_dir = 
    pytessy=source

setup_requires =
    setuptools >=38.3.0
    pip >= 20.0
    setuptools_scm
